--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import 'primeng/resources/primeng.min.css';
+
+html, body { height: 100%; }
+// html, body { height: 100%; }
+
+body { margin: 0;
+    font-family: Roboto,
+    "Helvetica Neue", 
+    sans-serif;
+    padding: 20px;
+    background-color: #f5f5fa !important;
+    box-sizing: border-box;
+}
