configuração da rotas e fazendo desing das telas

--- a/src/app/features/home/components/dashboard/dashboard.component.scss
+++ b/src/app/features/home/components/dashboard/dashboard.component.scss
@@ -1,24 +1,32 @@
-//configuração containers na tela
-
-.cetral-body {
+.body{
     display: flex;
-    justify-content: center;
-    text-align: center;
+    justify-content: center; 
+    align-items: center; 
     flex-wrap: wrap;
+    margin-top: 3%;
 }
-
-.container {
+//configuração containers na tela
+.fundo{
     width: 80%;
+    display: flex;
+    margin-bottom: 6%;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #f5f5fa;
+    border-radius: 20px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    padding: 20px;
+}
+.container {
+    width: 100%;
     padding: 26px;
     display: flex;
     flex-wrap: wrap;
-    /* Permite que os itens que não cabem na linha se movam para a próxima linha */
     justify-content: space-between;
-    /* Distribui o espaço entre os itens */
     background: #ffffff;
     border-radius: 6px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 40px;
 }
 
 .container-card {
@@ -30,164 +38,24 @@
     justify-content: center;
 }
 
-.container-custom {
+.circle-container{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border-radius: 6px;
-    gap: 10px;
-}
-
-.card-custom {
-    width: 23%;
-    padding: 9px;
-    background-color: #ffffff;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 16px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.container-grafico {
-    display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
-    padding: 0px;
-    margin-top: 5px;
     width: 100%;
-    background: #ffffff;
-    border-radius: 8px;
-    max-height: 264px;
-    // box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px;
+    align-items: center;
 }
-
-.grafico {
-    width: 100% !important;
-}
-
-.btn-calendario-container {
-    width: 80%;
-    background-color: #fff;
-    margin-bottom: 70px;
-    margin-top: 45px;
-    border-radius: 10px;
-    display: flex;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
-}
-
-.btn-grafico-ant {
-    border-radius: 8px;
-    /* margin-right: 44%; */
-    /* margin-left: 11px; */
-    border: none;
-    background-color: #ffffff;
-    width: 5%;
-    margin-top: 53px;
-    height: 133px;
-    position: relative;
-    /* margin-bottom: -45px;**/
-}
-
-.btn-grafico-prox {
-    border-radius: 8px;
-    /* margin-left: 43%; */
-    border: none;
-    background-color: #fff;
-    width: 5%;
-    height: 134px;
-    position: relative;
-    /* margin-bottom: -49px; */
-    margin-top: 52px;
-}
-
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
     .container-card {
         width: 100%;
-        /* Em telas menores, cada container-card ocupa toda a largura */
-    }
-
-    .card-custom {
-        width: 100% !important;
-    }
-
-    .container-grafico {
-        width: 100% !important;
-
-    }
-
-    .container-custom {
-        width: 100% !important;
-    }
-
-    .btn-menu-itens {
-        width: 48% !important;
-        justify-content: left;
-    }
-
-    .btn-calendario-container {
-        width: 100% !important;
-    }
-
-    .btn-calendario-container {
-        padding: 9px;
-    }
-
-    .btn-grafico-ant {
-        width: 10%;
-        margin-top: -2px;
-        height: 35px;
-        margin-right: -14px;
-        margin-left: -9px;
-    }
-
-    .btn-grafico-prox {
-        width: 9%;
-        height: 40px;
-        margin-top: -3px;
-        margin-left: -13px;
     }
 }
 
-@media (max-width: 900px) {
-    .container {
+@media (max-width: 1031px) {
+    .fundo {
         width: 100%;
     }
-
-    .card-custom {
-        width: 48%;
-    }
-
-    .container-grafico {
-        width: 93%;
-    }
-
-    .container-custom {
-        width: 93%;
-    }
-
-    .layout-menu {
-        width: 100%;
-    }
-
-    .menu-list {
-        width: 100%;
-    }
-
-    .btn-menu-itens {
-        width: 18%;
-    }
-
-    .btn-calendario-container {
-        width: 93%;
-    }
-
-    // .btn-grafico-ant{
-    //     margin-right: 43%;
-    //     margin-left: 0px;
-    // }
 }
 
 mat-card {
@@ -219,27 +87,10 @@ mat-card {
     font-size: 15px;
 }
 
-.button-card {
-    width: 100%;
-    color: #4c4747;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    background: #ffffff;
-    border: none;
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 12px;
-}
-.button-card:active{
-    background-color: #e0e0e0;
-}
-
 //customização do rating
 ::ng-deep .p-rating .p-rating-icon {
     transition: color 0.3s ease, transform 0.3s ease;
-    /* Transição suave para cor e transform */
+
 }
 
 ::ng-deep .p-rating .p-rating-item.p-rating-item-active .p-rating-icon {
@@ -247,20 +98,6 @@ mat-card {
     transform: scale(1.2);    
 }
 
-::ng-deep .p-rating .p-rating-icon.p-empty {
-    color: #cccccc;
-    /* Cor cinza para a estrela vazia */
-    transform: scale(1);
-    /* Normaliza o tamanho da estrela vazia */
-}
-
-.circle-container {
-    display: flex;
-    position: relative;
-    width: 100%;
-    align-items: center;
-    justify-content: center
-}
 
 .circle-background {
     fill: none;
@@ -279,13 +116,11 @@ mat-card {
 }
 
 .rating-value {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: #514b4b;
+    display: flex;
+    position: absolute;
 }
 
 .bar-value {
@@ -299,36 +134,27 @@ mat-card {
     align-items: center;
     margin-bottom: 6px;
     justify-content: flex-start;
-    /* Alinha ao início */
     width: 100%;
-    /* Garantir que o contêiner use 100% da largura */
     flex-wrap: wrap;
-    /* Permite que os itens se movam para uma nova linha quando necessário */
 }
 
 /* Contêiner da barra de fundo */
 .bar-container {
     background-color: #e0e0e0;
-    /* Cor de fundo da barra */
     height: 12px;
-    /* Altura da barra */
     border-radius: 5px;
     position: relative;
     flex-grow: 1;
-    /* Faz com que a barra ocupe todo o espaço restante */
     overflow: hidden;
-    /* Garante que a barra não transborde */
     width: 100%;
 }
 
 /* A barra de progresso (cor preenchida) */
 .bar {
     background-color: #4caf50;
-    /* Cor da barra (verde) */
     height: 100%;
     border-radius: 5px;
     transition: width 0.3s ease;
-    /* Animação suave */
 }
 
 /* Exibição do valor médio e votos ao lado da barra */
@@ -337,11 +163,8 @@ mat-card {
     font-size: 14px;
     color: #333;
     white-space: nowrap;
-    /* Evita que o texto se quebre em várias linhas */
     overflow: hidden;
-    /* Evita que o texto ultrapasse a área disponível */
     text-overflow: ellipsis;
-    /* Adiciona '...' se o texto for longo demais */
 }
 
 /* Estilo do nome da categoria de rating */
@@ -351,9 +174,7 @@ mat-card {
     margin-right: 10px;
     font-size: 14px;
     flex-shrink: 0;
-    /* Impede que o nome da categoria encolha */
     white-space: nowrap;
-    /* Impede que o nome quebre em várias linhas */
 }
 
 .rating-votes {
@@ -382,4 +203,17 @@ mat-card {
 }
 .text-btn-card{
     margin-top: 3px;
+}
+
+app-grafico-telas-grandes{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.mat-mdc-card-content {
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
+    flex-wrap: wrap;
 }
