--- a/src/app/features/home/components/grafico-telas-pequenas/grafico-telas-pequenas.component.html
+++ b/src/app/features/home/components/grafico-telas-pequenas/grafico-telas-pequenas.component.html
@@ -1,11 +1,17 @@
-<div class="btn-calendario-container"> 
-    <button class="btn-grafico-ant" (click)="prevMonth()">
-        <mat-icon>arrow_back_ios</mat-icon>
-    </button>
-    <div class="container-grafico">
-        <p-chart class="grafico" type="bar" [data]="data" [options]="options"></p-chart>
+<div class="btn-grafico-container">
+    <div class="fundo-btn">
+        <button class="btn-grafico-ant" (click)="prevMonth()">
+            <img class="menu" src="assets/icons/arrow_back.svg">
+        </button>
     </div>
-    <button class="btn-grafico-prox" (click)="nextMonth()">
-        <mat-icon>arrow_forward_ios</mat-icon>
-    </button>
+    <div class="fundo-btn-prox">
+        <button class="btn-grafico-prox" (click)="nextMonth()">
+            <img class="menu" src="assets/icons/arrow_forward.svg">
+        </button>
+    </div>
+    <div class="fundo">
+        <div class="container-grafico">
+            <p-chart class="grafico" type="bar" [data]="data" [options]="options" height="51vh"></p-chart>
+        </div>
+    </div>
 </div>
