--- a/src/app/layouts/layout/layout.component.html
+++ b/src/app/layouts/layout/layout.component.html
@@ -2,4 +2,7 @@
     <div class="container">
         <app-menu-bar-layout></app-menu-bar-layout>
     </div>
+    <div class="body">
+        <ng-content></ng-content>
+    </div>
 </div>
