--- a/src/app/layouts/menu-bar-layout/menu-bar-layout.component.scss
+++ b/src/app/layouts/menu-bar-layout/menu-bar-layout.component.scss
@@ -1,28 +1,27 @@
 .container-menu{
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     flex-wrap: wrap;
     border-bottom: 70px;
-    padding: 3px;
+    padding: 10px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 12px;
     border-bottom-left-radius: 12px;
+    background-color: #f5f5fa;
 }
 .layout-menu {
     display: flex;
     justify-content: left;
     align-items: center;
     padding: 12px;
-    width: 90%;
+    width: 100%;
     height: 50px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    /* Sombra */
     border-radius: 12px;
-    margin-top: 10px;
 }
 
 .btn-menu {
@@ -42,9 +41,10 @@
     display: flex;
     width: 19%;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     cursor: pointer;
     border-radius: 8px;
+    text-decoration: none;
 }
 .btn-menu-itens:active{
     background-color: #e4e4e4;
@@ -53,16 +53,16 @@
 span {
     font-size: 15px;
     color: #6e6d6d;
-    display: inline-block;
-    vertical-align: middle;
+    display: inline-flex;
+    vertical-align: super;
     font-weight: 700;
+    margin-top: 4px;
 }
 
 .menu-list {
     background-color: #fff;
-    width: 90%;
+    width: 100%;
     border-radius: 12px;
-    padding: 12px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
@@ -73,10 +73,10 @@ span {
     max-height: 0;
     opacity: 0;
     box-shadow: 0 9px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 4px;
 }
 .menu-list.visible {
-    max-height: 120px; 
+    max-height: 150px; 
+    padding: 16px;
     opacity: 1;
 }
 
@@ -88,16 +88,15 @@ span {
     }
 }
 
-@media (max-width: 900px) {
-    .layout-menu {
-        width: 100%;
-    }
-
-    .menu-list {
-        width: 100%;
-    }
+@media (max-width: 1031px) {
 
     .btn-menu-itens {
         width: 18%;
     }
+    .container-menu{
+        width: 100%;
+    }
+}
+.active{
+    background-color: rgb(239 238 251 / 40%);
 }
