ajustes no style dos componentes

--- a/src/app/features/home/components/card-com-rotas/card-com-rotas.component.html
+++ b/src/app/features/home/components/card-com-rotas/card-com-rotas.component.html
@@ -22,8 +22,8 @@
         </mat-card>
     </div>
 </div>
-<div class="fundo">
-    <div class="card-custom">
+<div class="fundo-b">
+    <div class="card-custom-b">
         <mat-card>
             <mat-card-header>
                 <div mat-card-avatar class="cabecalho-image">
@@ -71,8 +71,8 @@
         </mat-card>
     </div>
 </div>
-<div class="fundo">
-    <div class="card-custom">
+<div class="fundo-b">
+    <div class="card-custom-b">
         <mat-card>
             <mat-card-header>
                 <div mat-card-avatar class="cabecalho-image">
