correção de detalhes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,6 @@ body { margin: 0;
     "Helvetica Neue", 
     sans-serif;
     padding: 20px;
-    background-color: #dad3d3 !important;
+    background-color: rgba(200, 200, 200, 0.4) !important;
     box-sizing: border-box;
 }
