--- a/src/app/features/educacao/components/educacao-dashboard/educacao-dashboard.component.scss
+++ b/src/app/features/educacao/components/educacao-dashboard/educacao-dashboard.component.scss
@@ -87,8 +87,13 @@ mat-card {
 }
 
 ::ng-deep .p-rating .p-rating-item.p-rating-item-active .p-rating-icon {
-    color: #ffd700;
-    transform: scale(1.2);    
+    color: #89b5fa;
+    transform: scale(1.3);    
+}
+::ng-deep .p-rating .p-rating-item .p-rating-icon {
+    color: #89b5fa;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+    font-size: 1.143rem;
 }
 
 ::ng-deep .p-rating .p-rating-icon.p-empty {
@@ -114,7 +119,7 @@ mat-card {
 
 .circle-progress {
     fill: none;
-    stroke: #4caf50;
+    stroke: #89b5fa;
     stroke-width: 5;
     transform: rotate(-90deg);
     transform-origin: 50% 50%;
@@ -167,7 +172,7 @@ mat-card {
 
 /* A barra de progresso (cor preenchida) */
 .bar {
-    background-color: #4caf50;
+    background-color: #89b5fa;
     /* Cor da barra (verde) */
     height: 100%;
     border-radius: 5px;
@@ -215,7 +220,7 @@ mat-card {
 
 .rating-container {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     text-align: center;
     flex-wrap: wrap;
 }
@@ -223,4 +228,24 @@ mat-card {
 .rating-distribution {
     margin-top: 20px;
     width: 100%;
+}
+.btn-link{
+    height: 5vh;
+    margin-top: 1vh;
+    width: 35%;
+    border: none;
+    background-color: #89b5fa;
+    color: darkslategray;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 8px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.btn-link:active{
+    background-color: #5995f5;
 }
