--- a/src/app/features/home/components/card-com-rotas/card-com-rotas.component.scss
+++ b/src/app/features/home/components/card-com-rotas/card-com-rotas.component.scss
@@ -82,10 +82,14 @@ mat-card {
     transition: color 0.3s ease, transform 0.3s ease;
 
 }
-
 ::ng-deep .p-rating .p-rating-item.p-rating-item-active .p-rating-icon {
-    color: #ffd700;
-    transform: scale(1.2);    
+    color: #89b5fa;
+    transform: scale(1.3);    
+}
+::ng-deep .p-rating .p-rating-item .p-rating-icon {
+    color: #89b5fa;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+    font-size: 1.143rem;
 }
 
 .rating-value {
