--- a/src/app/features/home/components/dashboard/dashboard.component.html
+++ b/src/app/features/home/components/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="rating-info">
                         <p class="rating-votes">{{ totalVotes }} Avalições</p>
-                        <p-rating [(ngModel)]="value" [readonly]="true" [disabled]="true" [cancel]="false"
+                        <p-rating [(ngModel)]="generalAverage" [readonly]="true" [disabled]="true" [cancel]="false"
                             [stars]="5"></p-rating>
                     </div>
                     <div class="rating-distribution">
