--- a/src/app/features/saude/components/health-dashboard/health-dashboard.component.html
+++ b/src/app/features/saude/components/health-dashboard/health-dashboard.component.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="rating-info">
                         <p class="rating-votes">{{ totalVotes }} Avalições</p>
-                        <p-rating [(ngModel)]="value" [readonly]="true" [disabled]="true" [cancel]="false"
+                        <p-rating [(ngModel)]="generalAverage" [readonly]="true" [disabled]="true" [cancel]="false"
                             [stars]="5"></p-rating>
                     </div>
                     <div class="rating-distribution">
@@ -43,6 +43,9 @@
                             </div>
                         </div>
                     </div>
+                    <a [routerLink]="['/saude/formulario']"class="btn-link">
+                        <span>Inicar Avaliação</span>
+                    </a>
                 </div>
             </div>
         </div>
