--- a/src/app/features/educacao/components/formulario/formulario.component.html
+++ b/src/app/features/educacao/components/formulario/formulario.component.html
@@ -2,7 +2,8 @@
     <div class="fundo">
         <div class="container">
             <article class="title">
-                <p>Por favor, classifique o serviço prestado na área de educação usando o sistema de estrelas abaixo. Cada estrela representa a sua
+                <p>Por favor, classifique o serviço prestado na área de educação usando o sistema de estrelas abaixo.
+                    Cada estrela representa a sua
                     experiência.</p>
             </article>
             <article class="cabecario">
@@ -63,36 +64,40 @@
                     • O serviço superou minhas expectativas em todos os aspectos.
                 </p>
             </article>
-            <p>N°1)-Em uma escala de 1 a 5, como você avaliaria a qualidade do ensino recebido pelos alunos?</p>
+            <form>
+                <p>N°1)-Em uma escala de 1 a 5, como você avaliaria a qualidade do ensino recebido pelos alunos?</p>
+                <article class="quest">
+                    <article class="rating">
+                        <mat-radio-group type="radio" [formControl]="formulario.questao1" class="radio-group">
+                            @for (season of seasons; track season) {
+                            <mat-radio-button class="example-radio-button" [value]=1></mat-radio-button>
+                            }
+                        </mat-radio-group>
+                        <app-star></app-star>
+                    </article>
+                </article>
+            </form>
             <article class="quest">
+                <p>N°2)-Como você classificaria a infraestrutura da escola (salas de aula, bibliotecas, laboratórios,
+                    etc.)?</p>
                 <article class="rating">
-                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group" [(ngModel)]="melu">
+                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group"
+                        [(ngModel)]="value2">
                         @for (season of seasons; track season) {
-                        <mat-radio-button class="example-radio-button" [value]="melu"></mat-radio-button>
+                        <mat-radio-button class="example-radio-button" [value]=2></mat-radio-button>
                         }
                     </mat-radio-group>
                     <app-star></app-star>
                 </article>
             </article>
             <article class="quest">
-                <p>N°2)-Como você classificaria a infraestrutura da escola (salas de aula, bibliotecas, laboratórios, etc.)?</p>
+                <p>N°3)-Em uma escala de 1 a 5, como você avaliaria o apoio oferecido aos alunos (tutoria,
+                    aconselhamento, etc.)?</p>
                 <article class="rating">
                     <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group"
-                        [(ngModel)]="favoriteSeason">
+                        [(ngModel)]="value3">
                         @for (season of seasons; track season) {
-                        <mat-radio-button class="example-radio-button" [value]="season"></mat-radio-button>
-                        }
-                    </mat-radio-group>
-                    <app-star></app-star>
-                </article>
-            </article>
-            <article class="quest">
-                <p>N°3)-Em uma escala de 1 a 5, como você avaliaria o apoio oferecido aos alunos (tutoria, aconselhamento, etc.)?</p>
-                <article class="rating">
-                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group"
-                        [(ngModel)]="favoriteSeason">
-                        @for (season of seasons; track season) {
-                        <mat-radio-button class="example-radio-button" [value]="season"></mat-radio-button>
+                        <mat-radio-button class="example-radio-button" [value]=3></mat-radio-button>
                         }
                     </mat-radio-group>
                     <app-star></app-star>
@@ -102,21 +107,22 @@
                 <p>N°4)-Como você avaliaria a formação e a capacitação contínua dos professores? </p>
                 <article class="rating">
                     <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group"
-                        [(ngModel)]="favoriteSeason">
+                        [(ngModel)]="value4">
                         @for (season of seasons; track season) {
-                        <mat-radio-button class="example-radio-button" [value]="season"></mat-radio-button>
+                        <mat-radio-button class="example-radio-button" [value]=4></mat-radio-button>
                         }
                     </mat-radio-group>
                     <app-star></app-star>
                 </article>
             </article>
             <article class="quest">
-                <p>N°5)-De maneira geral, como você avaliaria sua experiência com os serviços educacionais oferecidos? </p>
+                <p>N°5)-De maneira geral, como você avaliaria sua experiência com os serviços educacionais oferecidos?
+                </p>
                 <article class="rating">
                     <mat-radio-group aria-labelledby="example-radio-group-label" class="radio-group"
-                        [(ngModel)]="favoriteSeason">
+                        [(ngModel)]="value5">
                         @for (season of seasons; track season) {
-                        <mat-radio-button class="radio-button" [value]="season"></mat-radio-button>
+                        <mat-radio-button class="radio-button" [value]=5></mat-radio-button>
                         }
                     </mat-radio-group>
                     <app-star></app-star>
@@ -125,15 +131,14 @@
         </div>
     </div>
     <div class="btn">
-        <div
-            style="background-color: #f5f5fa;
+        <div style="background-color: #f5f5fa;
             display: flex; 
             justify-content: center; 
             padding: 8px; 
             border-radius: 12px; 
             margin-bottom: 2vh;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-            <button class="btn-send" type="submit">Enviar</button>
+            <button class="btn-send" type="submit" (click)="openDialog()">Enviar</button>
         </div>
     </div>
 </div>
